ISSUE-8 - fix + test